Dynamicaly load java file from jar placed at a location according to input from kafka